--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,15 @@ jobs:
       - name: 显示选择的环境
         run: echo "你选择的环境是：${{ github.event.inputs.environment }}"
 
+      - name: 获取最新 Tag
+        id: get_tag
+        run: |
+          latest_tag=$(git describe --tags --abbrev=0)
+          echo "最新的 tag 是: $latest_tag"
+          # 去掉前缀 v，比如 v1.0.0 → 1.0.0
+          version=${latest_tag#v}
+          echo "version=$version" >> $GITHUB_OUTPUT
+
       - name: 部署到对应环境
         run: |
           if [ "${{ github.event.inputs.environment }}" = "uat" ]; then
