--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
           echo "Is Release: ${IS_RELEASE}"
           echo "Branch: ${{ github.ref_name }}"
           echo "Commit SHA: ${{ github.sha }}"
+          latest_tag=$(git describe --tags --abbrev=0)
+          echo "最新的 tag 是: $latest_tag"
           
 #          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
 #
